syntax ="proto3";

option java_multiple_files=true;
option java_package = "com.moensun.grpc.service";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

service Greeter {

    rpc SayHi (HelloRequest) returns (HelloReply) {}
}


message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
